--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ footer a:hover {
 }
 /* Footer link styling */
 .footer-link {
-    color: #ff5733; /* Default color */
+    color: white; /* Default color */
 }
 
 .footer-link:visited {
