--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
     background-color: #f4f4f4;
     color: #440202;
     line-height: 1.6;
-    margin: 40px;
 }
 
 /* Header and Nav */
@@ -156,9 +155,22 @@ footer {
     text-align: center;
     padding: 1.5rem 0;
     font-size: 0.9rem;
-    color: #440202;
+    background-color: #440202
 }
 
 footer img {
     margin-top: 10px;
+}
+.resize-image {
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+}
+.image-container {
+    text-align: center;
+    margin: 20px 0;
 }
